Add update all message template
